tests/invalid/global_variables/use_before_declaration.rs
/*
fail: 1
*/

main(): int {
    return foo;
}

foo: int = 3;